--- a/portfolio/src/components/Footer/Footer.css
+++ b/portfolio/src/components/Footer/Footer.css
@@ -8,6 +8,7 @@
     align-items: flex-end;
     min-height: 0vh;
     background: #333;
+    margin-top: 4vh;
 }
 .subcontainer{
     position: relative;
