--- a/portfolio/src/components/Header/Header.css
+++ b/portfolio/src/components/Header/Header.css
@@ -8,7 +8,7 @@
 	scroll-behavior: smooth;
 }
 :root{
-	--bg-color: #222327;
+	--bg-color: rgb(156, 156, 156); 
 	--text-color: #fff;
 	--main-color: greenyellow;
 }
