--- a/portfolio/src/components/Home/Home.css
+++ b/portfolio/src/components/Home/Home.css
@@ -13,7 +13,7 @@
 .asection::before{
     content: '';
     position: absolute;
-    bottom: 0;
+    top: 0;
     width: 100%;
     height: 100px;
     /* background: linear-gradient(to top,black,transparent); */
@@ -21,7 +21,7 @@
 }
 .asection img{
     position: absolute;
-    bottom: 0;
+    /* bottom: 0; */
     left: 0;
     width: 100%;
     height: 100%;
@@ -62,17 +62,17 @@ body{
     overflow-x: hidden;
 }
 @media screen and (max-width: 480px) {
-    .asection{
-        height: 50vh;
-    }
+    /* .asection{
+        height: 33vh;
+    } */
     #mountains_front,#mountains_behind{
         max-width: 100%;
-        height: auto;
+        /* height: auto; */
     }
     #text{
-        top:10%;
-        right: -37vh;
-        font-size: large;
+        font-size: x-large;
+        right: -50vh;
+        top: 16%;
     }
   }
 
