--- a/portfolio/src/components/Contact/Contact.css
+++ b/portfolio/src/components/Contact/Contact.css
@@ -125,7 +125,7 @@
         padding: 50px;
     }
     .containerC{
-        flex-direction: column;
+        flex-direction: column-reverse;
     }
     .containerC .contactInfo{
         margin-bottom: 40px;
