--- a/portfolio/src/components/Header/Header.css
+++ b/portfolio/src/components/Header/Header.css
@@ -141,3 +141,14 @@ header{
 		background: rgba(0,0,0,.5);
 	}
 }
+.alert{
+	position: absolute;
+	top:7vh;
+	width: 100%;
+}
+a{
+	text-decoration: none;
+}
+ul{
+	margin-bottom: 0;
+}
