--- a/portfolio/src/components/Contact/Contact.css
+++ b/portfolio/src/components/Contact/Contact.css
@@ -136,9 +136,12 @@
         width: 100%;
     }
 }
+.validemail{
+    color: red;
+}
 @media (max-width:480px) {
     .textC span{
         display: inline-block;
     }
-    
 }
+    
