--- a/portfolio/src/components/Services/Services.css
+++ b/portfolio/src/components/Services/Services.css
@@ -1,5 +1,3 @@
-/* 12columns.css | Created by Katherine Kato | Released under the MIT license */
-/* GitHub: https://kathykato.github.io/12columns/ */
 @import url("https://fonts.googleapis.com/css?family=Barlow:400,500,700");
 .container {
   margin: auto;
@@ -547,8 +545,7 @@ body {
   font-family: "Barlow", sans-serif;
   font-size: 1.125rem;
   line-height: 1.5;
-  color: #787878;
-  background: #fff;
+  color: #ffffff;
   text-rendering: optimizeLegibility;
 }
 
