--- a/portfolio/src/components/Aboutus/About.css
+++ b/portfolio/src/components/Aboutus/About.css
@@ -1,8 +1,8 @@
 .wrapper{
     width: 100%;
-    min-height: 130vh;
+    /* min-height: 130vh; */
     overflow: hidden;
-    background-color: #ddd;
+    /* background-color: #ddd; */
 }
 .row{
     width: 100%;
@@ -31,13 +31,14 @@
 .content h2{
     font-style: 40px;
     font-family: cursive;
-    color: green;
+    color: rgb(255, 255, 255);
 }
 .content p{
     font-size: 20px;
     font-family: serif;
     margin-top: 10px;
     line-height: 1.5;
+    color: white;
 }
 @media screen and (max-width: 960px){
     .image-section{
