--- a/portfolio/src/components/Contact/Contact.css
+++ b/portfolio/src/components/Contact/Contact.css
@@ -64,7 +64,7 @@
 }
 .containerC .contactInfo .box .textC h3{
     font-weight: 500;
-    color: #70d6e3;
+    color: greenyellow;
 }
 .contactForm{
     width: 40%;
