--- a/portfolio/src/components/HomeContents/HomeContents.css
+++ b/portfolio/src/components/HomeContents/HomeContents.css
@@ -188,7 +188,7 @@ padding: 60px;
 /* Extras */
 /**************************/
 #parallax-world-of-ugg .line-break {
-  border-bottom:1px solid black; 
+  border-bottom:1px solid rgb(255, 255, 255); 
  width: 150px; 
  margin:0 auto; 
  
